# ComfyUI_MetaSaver

./: .gitignore  LICENSE  QUICKSTART.md  README.md  USAGE.md  __init__.py  meta_saver_node.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: read_metadata.py
