[project]
name = "metasaver"
description = "A powerful ComfyUI custom node for saving images with flexible custom metadata fields embedded in PNG files."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core dependencies for ComfyUI MetaSaver", "# Note: Most dependencies are provided by ComfyUI itself", "# Image processing (usually already available in ComfyUI)", "Pillow>=9.0.0", "# NumPy (usually already available in ComfyUI)", "numpy>=1.20.0"]

[project.urls]
Repository = "https://github.com/SorenWeile/ComfyUI_MetaSaver"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SorenWeile/ComfyUI_MetaSaver/wiki"
"Bug Tracker" = "https://github.com/SorenWeile/ComfyUI_MetaSaver/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_MetaSaver"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

